atualização das img

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ button:hover{
 .menu{
     height: 100vh;
     margin-top: 50px;
-    background: url('images/banner-coffee.jpg');
+    background: url('images/home-img.jpg');
     background-color: black;
     background-size: cover;
     background-position: center;
